[gd_scene load_steps=16 format=1]

[ext_resource path="res://map.tscn" type="PackedScene" id=1]
[ext_resource path="res://maps/north_town.gd" type="Script" id=2]
[ext_resource path="res://tilesets/town_and_castle.tres" type="TileSet" id=3]
[ext_resource path="res://miscs/door.tscn" type="PackedScene" id=4]
[ext_resource path="res://npcs/soldier0.tscn" type="PackedScene" id=5]
[ext_resource path="res://npcs/female1.tscn" type="PackedScene" id=6]
[ext_resource path="res://npcs/oldman1.tscn" type="PackedScene" id=7]
[ext_resource path="res://npcs/oldwoman0.tscn" type="PackedScene" id=8]
[ext_resource path="res://npcs/male0.tscn" type="PackedScene" id=9]
[ext_resource path="res://npcs/female0.tscn" type="PackedScene" id=10]
[ext_resource path="res://npcs/male1.tscn" type="PackedScene" id=11]
[ext_resource path="res://npcs/boy0.tscn" type="PackedScene" id=12]
[ext_resource path="res://npcs/boy1.tscn" type="PackedScene" id=13]
[ext_resource path="res://npcs/girl0.tscn" type="PackedScene" id=14]
[ext_resource path="res://npcs/girl1.tscn" type="PackedScene" id=15]

[node name="Root" instance=ExtResource( 1 )]

script/script = ExtResource( 2 )

[node name="TileMap" parent="Camera"]

editor/display_folded = false
tile_set = ExtResource( 3 )
tile_data = IntArray( -458739, 5, -458738, 5, -458737, 5, -458736, 5, -458735, 5, -458734, 5, -458733, 5, -458732, 5, -458731, 5, -458730, 5, -458729, 5, -458728, 5, -458727, 8, -458726, 5, -458725, 5, -458724, 5, -458723, 5, -458722, 8, -458721, 5, -458720, 5, -458719, 5, -458718, 5, -458717, 5, -458716, 5, -458715, 5, -458714, 5, -458713, 5, -458712, 5, -458711, 5, -458710, 5, -393203, 5, -393202, 5, -393201, 5, -393200, 5, -393199, 5, -393198, 5, -393197, 5, -393196, 5, -393195, 5, -393194, 5, -393193, 5, -393192, 5, -393191, 8, -393190, 5, -393189, 5, -393188, 5, -393187, 5, -393186, 8, -393185, 5, -393184, 5, -393183, 5, -393182, 5, -393181, 5, -393180, 5, -393179, 5, -393178, 5, -393177, 5, -393176, 5, -393175, 5, -393174, 5, -327667, 5, -327666, 5, -327665, 5, -327664, 5, -327663, 5, -327662, 5, -327661, 5, -327660, 5, -327659, 5, -327658, 5, -327657, 5, -327656, 5, -327655, 8, -327654, 5, -327653, 5, -327652, 5, -327651, 5, -327650, 8, -327649, 5, -327648, 5, -327647, 5, -327646, 5, -327645, 5, -327644, 5, -327643, 5, -327642, 5, -327641, 5, -327640, 5, -327639, 5, -327638, 5, -262131, 5, -262130, 5, -262129, 5, -262128, 5, -262127, 5, -262126, 5, -262125, 5, -262124, 5, -262123, 5, -262122, 5, -262121, 5, -262120, 5, -262119, 8, -262118, 5, -262117, 5, -262116, 5, -262115, 5, -262114, 8, -262113, 5, -262112, 5, -262111, 5, -262110, 5, -262109, 5, -262108, 5, -262107, 5, -262106, 5, -262105, 5, -262104, 5, -262103, 5, -262102, 5, -196595, 5, -196594, 5, -196593, 5, -196592, 5, -196591, 5, -196590, 5, -196589, 5, -196588, 5, -196587, 5, -196586, 5, -196585, 5, -196584, 5, -196583, 8, -196582, 5, -196581, 5, -196580, 5, -196579, 5, -196578, 8, -196577, 5, -196576, 5, -196575, 5, -196574, 5, -196573, 5, -196572, 5, -196571, 5, -196570, 5, -196569, 5, -196568, 5, -196567, 5, -196566, 5, -131059, 5, -131058, 5, -131057, 5, -131056, 5, -131055, 5, -131054, 5, -131053, 5, -131052, 5, -131051, 5, -131050, 5, -131049, 5, -131048, 5, -131047, 8, -131046, 5, -131045, 5, -131044, 5, -131043, 5, -131042, 8, -131041, 5, -131040, 5, -131039, 5, -131038, 5, -131037, 5, -131036, 5, -131035, 5, -131034, 5, -131033, 5, -131032, 5, -131031, 5, -131030, 5, -65523, 5, -65522, 5, -65521, 5, -65520, 5, -65519, 5, -65518, 5, -65517, 5, -65516, 5, -65515, 5, -65514, 5, -65513, 5, -65512, 5, -65511, 8, -65510, 5, -65509, 5, -65508, 5, -65507, 5, -65506, 8, -65505, 5, -65504, 5, -65503, 5, -65502, 5, -65501, 5, -65500, 5, -65499, 5, -65498, 5, -65497, 5, -65496, 5, -65495, 5, -65494, 5, 13, 6, 14, 6, 15, 6, 16, 6, 17, 6, 18, 6, 19, 6, 20, 6, 21, 6, 22, 6, 23, 6, 24, 6, 25, 8, 26, 5, 27, 5, 28, 5, 29, 5, 30, 8, 31, 6, 32, 6, 33, 6, 34, 6, 35, 6, 36, 6, 37, 6, 38, 6, 39, 6, 40, 6, 41, 6, 42, 6, 131065, 4, 131066, 4, 131067, 4, 131068, 4, 131069, 4, 131070, 4, 131071, 4, 65536, 4, 65537, 4, 65538, 4, 65539, 4, 65540, 4, 65541, 4, 65542, 4, 65543, 4, 65544, 4, 65545, 4, 65546, 4, 65547, 4, 65548, 4, 65549, 4, 65550, 4, 65551, 4, 65552, 4, 65553, 4, 65554, 4, 65555, 4, 65556, 4, 65557, 4, 65558, 4, 65559, 4, 65560, 4, 65561, 8, 65562, 5, 65563, 5, 65564, 5, 65565, 5, 65566, 8, 65567, 4, 65568, 4, 65569, 4, 65570, 4, 65571, 4, 65572, 4, 65573, 4, 65574, 4, 65575, 4, 65576, 4, 65577, 4, 65578, 4, 65579, 4, 65580, 4, 65581, 4, 65582, 4, 65583, 4, 65584, 4, 65585, 4, 65586, 4, 65587, 4, 65588, 4, 65589, 4, 65590, 4, 65591, 4, 65592, 4, 65593, 4, 65594, 4, 65595, 4, 65596, 4, 65597, 4, 65598, 4, 196601, 2, 196602, 2, 196603, 2, 196604, 2, 196605, 2, 196606, 2, 196607, 2, 131072, 2, 131073, 2, 131074, 2, 131075, 2, 131076, 2, 131077, 2, 131078, 2, 131079, 2, 131080, 5, 131081, 6, 131082, 6, 131083, 6, 131084, 6, 131085, 6, 131086, 6, 131087, 5, 131088, 5, 131089, 6, 131090, 6, 131091, 6, 131092, 6, 131093, 6, 131094, 6, 131095, 5, 131096, 4, 131097, 8, 131098, 5, 131099, 38, 131100, 38, 131101, 5, 131102, 8, 131103, 4, 131104, 5, 131105, 6, 131106, 6, 131107, 6, 131108, 6, 131109, 6, 131110, 6, 131111, 5, 131112, 5, 131113, 6, 131114, 6, 131115, 6, 131116, 6, 131117, 6, 131118, 6, 131119, 5, 131120, 2, 131121, 2, 131122, 2, 131123, 2, 131124, 2, 131125, 2, 131126, 2, 131127, 2, 131128, 2, 131129, 2, 131130, 2, 131131, 2, 131132, 2, 131133, 2, 131134, 2, 262137, 2, 262138, 2, 262139, 2, 262140, 2, 262141, 2, 262142, 2, 262143, 2, 196608, 2, 196609, 2, 196610, 2, 196611, 2, 196612, 2, 196613, 2, 196614, 2, 196615, 2, 196616, 5, 196617, 19, 196618, 10, 196619, 10, 196620, 10, 196621, 15, 196622, 16, 196623, 5, 196624, 5, 196625, 22, 196626, 22, 196627, 23, 196628, 10, 196629, 15, 196630, 16, 196631, 5, 196632, 4, 196633, 8, 196634, 5, 196635, 29, 196636, 30, 196637, 5, 196638, 8, 196639, 4, 196640, 5, 196641, 19, 196642, 10, 196643, 10, 196644, 10, 196645, 15, 196646, 16, 196647, 5, 196648, 5, 196649, 19, 196650, 10, 196651, 10, 196652, 10, 196653, 15, 196654, 16, 196655, 5, 196656, 2, 196657, 2, 196658, 2, 196659, 2, 196660, 2, 196661, 2, 196662, 2, 196663, 2, 196664, 2, 196665, 2, 196666, 2, 196667, 2, 196668, 2, 196669, 2, 196670, 2, 327673, 2, 327674, 2, 327675, 2, 327676, 2, 327677, 2, 327678, 2, 327679, 2, 262144, 2, 262145, 2, 262146, 2, 262147, 2, 262148, 2, 262149, 2, 262150, 2, 262151, 2, 262152, 5, 262153, 10, 262154, 10, 262155, 10, 262156, 10, 262157, 10, 262158, 10, 262159, 5, 262160, 5, 262161, 10, 262162, 10, 262163, 10, 262164, 10, 262165, 10, 262166, 10, 262167, 5, 262168, 4, 262169, 7, 262170, 6, 262171, 31, 262172, 32, 262173, 6, 262174, 7, 262175, 4, 262176, 5, 262177, 10, 262178, 10, 262179, 10, 262180, 10, 262181, 10, 262182, 10, 262183, 5, 262184, 5, 262185, 10, 262186, 10, 262187, 10, 262188, 10, 262189, 10, 262190, 10, 262191, 5, 262192, 2, 262193, 2, 262194, 2, 262195, 2, 262196, 2, 262197, 2, 262198, 2, 262199, 2, 262200, 2, 262201, 2, 262202, 2, 262203, 2, 262204, 2, 262205, 2, 262206, 2, 393209, 2, 393210, 2, 393211, 2, 393212, 2, 393213, 2, 393214, 2, 393215, 2, 327680, 2, 327681, 2, 327682, 2, 327683, 2, 327684, 2, 327685, 2, 327686, 2, 327687, 2, 327688, 5, 327689, 10, 327690, 11, 327691, 13, 327692, 11, 327693, 10, 327694, 10, 327695, 5, 327696, 5, 327697, 10, 327698, 11, 327699, 13, 327700, 11, 327701, 10, 327702, 10, 327703, 5, 327704, 4, 327705, 3, 327706, 0, 327707, 0, 327708, 0, 327709, 0, 327710, 3, 327711, 4, 327712, 5, 327713, 10, 327714, 11, 327715, 13, 327716, 11, 327717, 10, 327718, 10, 327719, 5, 327720, 5, 327721, 10, 327722, 11, 327723, 13, 327724, 11, 327725, 10, 327726, 10, 327727, 5, 327728, 2, 327729, 2, 327730, 2, 327731, 2, 327732, 2, 327733, 2, 327734, 2, 327735, 2, 327736, 2, 327737, 2, 327738, 2, 327739, 2, 327740, 2, 327741, 2, 327742, 2, 458745, 2, 458746, 2, 458747, 2, 458748, 2, 458749, 2, 458750, 2, 458751, 2, 393216, 2, 393217, 2, 393218, 2, 393219, 2, 393220, 2, 393221, 2, 393222, 2, 393223, 2, 393224, 5, 393225, 10, 393226, 10, 393227, 10, 393228, 10, 393229, 10, 393230, 10, 393231, 5, 393232, 5, 393233, 10, 393234, 10, 393235, 10, 393236, 10, 393237, 10, 393238, 10, 393239, 5, 393240, 4, 393241, 3, 393242, 0, 393243, 0, 393244, 0, 393245, 0, 393246, 3, 393247, 4, 393248, 5, 393249, 10, 393250, 10, 393251, 10, 393252, 10, 393253, 10, 393254, 10, 393255, 5, 393256, 5, 393257, 10, 393258, 10, 393259, 10, 393260, 10, 393261, 10, 393262, 10, 393263, 5, 393264, 2, 393265, 2, 393266, 2, 393267, 2, 393268, 2, 393269, 2, 393270, 2, 393271, 2, 393272, 2, 393273, 2, 393274, 2, 393275, 2, 393276, 2, 393277, 2, 393278, 2, 524281, 2, 524282, 2, 524283, 2, 524284, 2, 524285, 2, 524286, 2, 524287, 2, 458752, 2, 458753, 2, 458754, 2, 458755, 2, 458756, 2, 458757, 2, 458758, 2, 458759, 2, 458760, 5, 458761, 10, 458762, 10, 458763, 10, 458764, 10, 458765, 10, 458766, 20, 458767, 5, 458768, 5, 458769, 20, 458770, 10, 458771, 10, 458772, 10, 458773, 10, 458774, 10, 458775, 5, 458776, 4, 458777, 3, 458778, 0, 458779, 0, 458780, 0, 458781, 0, 458782, 3, 458783, 4, 458784, 5, 458785, 10, 458786, 10, 458787, 10, 458788, 10, 458789, 10, 458790, 20, 458791, 5, 458792, 5, 458793, 20, 458794, 10, 458795, 10, 458796, 10, 458797, 10, 458798, 10, 458799, 5, 458800, 2, 458801, 2, 458802, 2, 458803, 2, 458804, 2, 458805, 2, 458806, 2, 458807, 2, 458808, 2, 458809, 2, 458810, 2, 458811, 2, 458812, 2, 458813, 2, 458814, 2, 589817, 2, 589818, 2, 589819, 2, 589820, 2, 589821, 2, 589822, 2, 589823, 2, 524288, 2, 524289, 2, 524290, 2, 524291, 2, 524292, 2, 524293, 2, 524294, 2, 524295, 2, 524296, 5, 524297, 10, 524298, 10, 524299, 10, 524300, 10, 524301, 10, 524302, 21, 524303, 5, 524304, 5, 524305, 21, 524306, 10, 524307, 10, 524308, 10, 524309, 10, 524310, 10, 524311, 5, 524312, 4, 524313, 3, 524314, 0, 524315, 0, 524316, 0, 524317, 0, 524318, 3, 524319, 4, 524320, 5, 524321, 10, 524322, 10, 524323, 10, 524324, 10, 524325, 10, 524326, 21, 524327, 5, 524328, 5, 524329, 21, 524330, 10, 524331, 10, 524332, 10, 524333, 10, 524334, 10, 524335, 5, 524336, 2, 524337, 2, 524338, 2, 524339, 2, 524340, 2, 524341, 2, 524342, 2, 524343, 2, 524344, 2, 524345, 2, 524346, 2, 524347, 2, 524348, 2, 524349, 2, 524350, 2, 655353, 2, 655354, 2, 655355, 2, 655356, 2, 655357, 2, 655358, 2, 655359, 2, 589824, 2, 589825, 2, 589826, 2, 589827, 2, 589828, 2, 589829, 2, 589830, 2, 589831, 2, 589832, 37, 589833, 12, 589834, 6, 589835, 6, 589836, 6, 589837, 6, 589838, 6, 589839, 6, 589840, 6, 589841, 6, 589842, 6, 589843, 6, 589844, 6, 589845, 6, 589846, 10, 589847, 6, 589848, 4, 589849, 3, 589850, 0, 589851, 0, 589852, 0, 589853, 0, 589854, 3, 589855, 4, 589856, 6, 589857, 10, 589858, 6, 589859, 6, 589860, 6, 589861, 6, 589862, 6, 589863, 6, 589864, 6, 589865, 6, 589866, 6, 589867, 6, 589868, 6, 589869, 6, 589870, 12, 589871, 9, 589872, 2, 589873, 2, 589874, 2, 589875, 2, 589876, 2, 589877, 2, 589878, 2, 589879, 2, 589880, 2, 589881, 2, 589882, 2, 589883, 2, 589884, 2, 589885, 2, 589886, 2, 720889, 0, 720890, 0, 720891, 0, 720892, 0, 720893, 0, 720894, 0, 720895, 0, 655360, 0, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 0, 655377, 0, 655378, 0, 655379, 0, 655380, 0, 655381, 0, 655382, 0, 655383, 0, 655384, 0, 655385, 0, 655386, 0, 655387, 0, 655388, 0, 655389, 0, 655390, 0, 655391, 0, 655392, 0, 655393, 0, 655394, 0, 655395, 0, 655396, 0, 655397, 0, 655398, 0, 655399, 0, 655400, 0, 655401, 0, 655402, 0, 655403, 0, 655404, 0, 655405, 0, 655406, 0, 655407, 0, 655408, 0, 655409, 0, 655410, 0, 655411, 0, 655412, 0, 655413, 0, 655414, 0, 655415, 0, 655416, 0, 655417, 0, 655418, 0, 655419, 0, 655420, 0, 655421, 0, 655422, 0, 786425, 0, 786426, 0, 786427, 0, 786428, 0, 786429, 0, 786430, 0, 786431, 0, 720896, 0, 720897, 0, 720898, 0, 720899, 0, 720900, 0, 720901, 0, 720902, 0, 720903, 0, 720904, 0, 720905, 0, 720906, 0, 720907, 0, 720908, 0, 720909, 0, 720910, 0, 720911, 0, 720912, 0, 720913, 0, 720914, 0, 720915, 0, 720916, 0, 720917, 0, 720918, 0, 720919, 0, 720920, 0, 720921, 0, 720922, 0, 720923, 0, 720924, 0, 720925, 0, 720926, 0, 720927, 0, 720928, 0, 720929, 0, 720930, 0, 720931, 0, 720932, 0, 720933, 0, 720934, 0, 720935, 0, 720936, 0, 720937, 0, 720938, 0, 720939, 0, 720940, 0, 720941, 0, 720942, 0, 720943, 0, 720944, 0, 720945, 0, 720946, 0, 720947, 0, 720948, 0, 720949, 0, 720950, 0, 720951, 0, 720952, 0, 720953, 0, 720954, 0, 720955, 0, 720956, 0, 720957, 0, 720958, 0, 851961, 0, 851962, 0, 851963, 0, 851964, 0, 851965, 0, 851966, 0, 851967, 0, 786432, 0, 786433, 0, 786434, 0, 786435, 0, 786436, 0, 786437, 0, 786438, 0, 786439, 0, 786440, 0, 786441, 0, 786442, 0, 786443, 0, 786444, 0, 786445, 0, 786446, 0, 786447, 0, 786448, 0, 786449, 0, 786450, 0, 786451, 0, 786452, 0, 786453, 0, 786454, 0, 786455, 0, 786456, 0, 786457, 0, 786458, 0, 786459, 0, 786460, 0, 786461, 0, 786462, 0, 786463, 0, 786464, 0, 786465, 0, 786466, 0, 786467, 0, 786468, 0, 786469, 0, 786470, 0, 786471, 0, 786472, 0, 786473, 0, 786474, 0, 786475, 0, 786476, 0, 786477, 0, 786478, 0, 786479, 0, 786480, 0, 786481, 0, 786482, 0, 786483, 0, 786484, 0, 786485, 0, 786486, 0, 786487, 0, 786488, 0, 786489, 0, 786490, 0, 786491, 0, 786492, 0, 786493, 0, 786494, 0, 917497, 0, 917498, 0, 917499, 0, 917500, 0, 917501, 0, 917502, 0, 917503, 0, 851968, 0, 851969, 0, 851970, 0, 851971, 0, 851972, 0, 851973, 0, 851974, 0, 851975, 0, 851976, 0, 851977, 0, 851978, 0, 851979, 0, 851980, 0, 851981, 0, 851982, 0, 851983, 0, 851984, 0, 851985, 0, 851986, 0, 851987, 0, 851988, 0, 851989, 0, 851990, 0, 851991, 0, 851992, 0, 851993, 0, 851994, 0, 851995, 0, 851996, 0, 851997, 0, 851998, 0, 851999, 0, 852000, 0, 852001, 0, 852002, 0, 852003, 0, 852004, 0, 852005, 0, 852006, 0, 852007, 0, 852008, 0, 852009, 0, 852010, 0, 852011, 0, 852012, 0, 852013, 0, 852014, 0, 852015, 0, 852016, 0, 852017, 0, 852018, 0, 852019, 0, 852020, 0, 852021, 0, 852022, 0, 852023, 0, 852024, 0, 852025, 0, 852026, 0, 852027, 0, 852028, 0, 852029, 0, 852030, 0, 983033, 2, 983034, 2, 983035, 2, 983036, 2, 983037, 2, 983038, 2, 983039, 2, 917504, 2, 917505, 2, 917506, 2, 917507, 2, 917508, 2, 917509, 2, 917510, 2, 917511, 2, 917512, 2, 917513, 2, 917514, 2, 917515, 2, 917516, 2, 917517, 2, 917518, 2, 917519, 2, 917520, 2, 917521, 2, 917522, 2, 917523, 2, 917524, 2, 917525, 2, 917526, 2, 917527, 2, 917528, 2, 917529, 2, 917530, 2, 917531, 2, 917532, 2, 917533, 2, 917534, 2, 917535, 2, 917536, 2, 917537, 2, 917538, 2, 917539, 2, 917540, 2, 917541, 2, 917542, 2, 917543, 2, 917544, 2, 917545, 2, 917546, 2, 917547, 2, 917548, 2, 917549, 2, 917550, 2, 917551, 2, 917552, 2, 917553, 2, 917554, 2, 917555, 2, 917556, 2, 917557, 2, 917558, 2, 917559, 2, 917560, 2, 917561, 2, 917562, 2, 917563, 2, 917564, 2, 917565, 2, 917566, 2, 1048569, 2, 1048570, 2, 1048571, 2, 1048572, 2, 1048573, 2, 1048574, 2, 1048575, 2, 983040, 2, 983041, 2, 983042, 2, 983043, 2, 983044, 2, 983045, 2, 983046, 2, 983047, 2, 983048, 2, 983049, 2, 983050, 2, 983051, 2, 983052, 2, 983053, 2, 983054, 2, 983055, 2, 983056, 2, 983057, 2, 983058, 2, 983059, 2, 983060, 2, 983061, 2, 983062, 2, 983063, 2, 983064, 2, 983065, 2, 983066, 2, 983067, 2, 983068, 2, 983069, 2, 983070, 2, 983071, 2, 983072, 2, 983073, 2, 983074, 2, 983075, 2, 983076, 2, 983077, 2, 983078, 2, 983079, 2, 983080, 2, 983081, 2, 983082, 2, 983083, 2, 983084, 2, 983085, 2, 983086, 2, 983087, 2, 983088, 2, 983089, 2, 983090, 2, 983091, 2, 983092, 2, 983093, 2, 983094, 2, 983095, 2, 983096, 2, 983097, 2, 983098, 2, 983099, 2, 983100, 2, 983101, 2, 983102, 2, 1114105, 2, 1114106, 2, 1114107, 2, 1114108, 2, 1114109, 2, 1114110, 2, 1114111, 2, 1048576, 2, 1048577, 2, 1048578, 2, 1048579, 2, 1048580, 2, 1048581, 2, 1048582, 2, 1048583, 2, 1048584, 2, 1048585, 2, 1048586, 2, 1048587, 2, 1048588, 2, 1048589, 2, 1048590, 2, 1048591, 2, 1048592, 2, 1048593, 2, 1048594, 2, 1048595, 2, 1048596, 2, 1048597, 2, 1048598, 2, 1048599, 2, 1048600, 2, 1048601, 2, 1048602, 2, 1048603, 2, 1048604, 2, 1048605, 2, 1048606, 2, 1048607, 2, 1048608, 2, 1048609, 2, 1048610, 2, 1048611, 2, 1048612, 2, 1048613, 2, 1048614, 2, 1048615, 2, 1048616, 2, 1048617, 2, 1048618, 2, 1048619, 2, 1048620, 2, 1048621, 2, 1048622, 2, 1048623, 2, 1048624, 2, 1048625, 2, 1048626, 2, 1048627, 2, 1048628, 2, 1048629, 2, 1048630, 2, 1048631, 2, 1048632, 2, 1048633, 2, 1048634, 2, 1048635, 2, 1048636, 2, 1048637, 2, 1048638, 2, 1179641, 2, 1179642, 2, 1179643, 2, 1179644, 2, 1179645, 2, 1179646, 2, 1179647, 2, 1114112, 2, 1114113, 2, 1114114, 2, 1114115, 2, 1114116, 2, 1114117, 2, 1114118, 2, 1114119, 2, 1114120, 2, 1114121, 2, 1114122, 2, 1114123, 2, 1114124, 2, 1114125, 2, 1114126, 2, 1114127, 2, 1114128, 2, 1114129, 2, 1114130, 2, 1114131, 2, 1114132, 2, 1114133, 2, 1114134, 2, 1114135, 2, 1114136, 2, 1114137, 2, 1114138, 2, 1114139, 2, 1114140, 2, 1114141, 2, 1114142, 2, 1114143, 2, 1114144, 2, 1114145, 2, 1114146, 2, 1114147, 2, 1114148, 2, 1114149, 2, 1114150, 2, 1114151, 2, 1114152, 2, 1114153, 2, 1114154, 2, 1114155, 2, 1114156, 2, 1114157, 2, 1114158, 2, 1114159, 2, 1114160, 2, 1114161, 2, 1114162, 2, 1114163, 2, 1114164, 2, 1114165, 2, 1114166, 2, 1114167, 2, 1114168, 2, 1114169, 2, 1114170, 2, 1114171, 2, 1114172, 2, 1114173, 2, 1114174, 2, 1245177, 2, 1245178, 2, 1245179, 2, 1245180, 2, 1245181, 2, 1245182, 2, 1245183, 2, 1179648, 2, 1179649, 2, 1179650, 2, 1179651, 2, 1179652, 2, 1179653, 2, 1179654, 2, 1179655, 2, 1179656, 2, 1179657, 2, 1179658, 2, 1179659, 2, 1179660, 2, 1179661, 2, 1179662, 2, 1179663, 2, 1179664, 2, 1179665, 2, 1179666, 2, 1179667, 2, 1179668, 2, 1179669, 2, 1179670, 2, 1179671, 2, 1179672, 2, 1179673, 2, 1179674, 2, 1179675, 2, 1179676, 2, 1179677, 2, 1179678, 2, 1179679, 2, 1179680, 2, 1179681, 2, 1179682, 2, 1179683, 2, 1179684, 2, 1179685, 2, 1179686, 2, 1179687, 2, 1179688, 2, 1179689, 2, 1179690, 2, 1179691, 2, 1179692, 2, 1179693, 2, 1179694, 2, 1179695, 2, 1179696, 2, 1179697, 2, 1179698, 2, 1179699, 2, 1179700, 2, 1179701, 2, 1179702, 2, 1179703, 2, 1179704, 2, 1179705, 2, 1179706, 2, 1179707, 2, 1179708, 2, 1179709, 2, 1179710, 2, 1310713, 2, 1310714, 2, 1310715, 2, 1310716, 2, 1310717, 2, 1310718, 2, 1310719, 2, 1245184, 2, 1245185, 2, 1245186, 2, 1245187, 2, 1245188, 2, 1245189, 2, 1245190, 2, 1245191, 2, 1245192, 2, 1245193, 2, 1245194, 2, 1245195, 2, 1245196, 2, 1245197, 2, 1245198, 2, 1245199, 2, 1245200, 2, 1245201, 2, 1245202, 2, 1245203, 2, 1245204, 2, 1245205, 2, 1245206, 2, 1245207, 2, 1245208, 2, 1245209, 2, 1245210, 2, 1245211, 2, 1245212, 2, 1245213, 2, 1245214, 2, 1245215, 2, 1245216, 2, 1245217, 2, 1245218, 2, 1245219, 2, 1245220, 2, 1245221, 2, 1245222, 2, 1245223, 2, 1245224, 2, 1245225, 2, 1245226, 2, 1245227, 2, 1245228, 2, 1245229, 2, 1245230, 2, 1245231, 2, 1245232, 2, 1245233, 2, 1245234, 2, 1245235, 2, 1245236, 2, 1245237, 2, 1245238, 2, 1245239, 2, 1245240, 2, 1245241, 2, 1245242, 2, 1245243, 2, 1245244, 2, 1245245, 2, 1245246, 2, 1376249, 2, 1376250, 2, 1376251, 2, 1376252, 2, 1376253, 2, 1376254, 2, 1376255, 2, 1310720, 2, 1310721, 2, 1310722, 2, 1310723, 2, 1310724, 2, 1310725, 2, 1310726, 2, 1310727, 2, 1310728, 2, 1310729, 2, 1310730, 2, 1310731, 2, 1310732, 2, 1310733, 2, 1310734, 2, 1310735, 2, 1310736, 2, 1310737, 2, 1310738, 2, 1310739, 2, 1310740, 2, 1310741, 2, 1310742, 2, 1310743, 2, 1310744, 2, 1310745, 2, 1310746, 2, 1310747, 2, 1310748, 2, 1310749, 2, 1310750, 2, 1310751, 2, 1310752, 2, 1310753, 2, 1310754, 2, 1310755, 2, 1310756, 2, 1310757, 2, 1310758, 2, 1310759, 2, 1310760, 2, 1310761, 2, 1310762, 2, 1310763, 2, 1310764, 2, 1310765, 2, 1310766, 2, 1310767, 2, 1310768, 2, 1310769, 2, 1310770, 2, 1310771, 2, 1310772, 2, 1310773, 2, 1310774, 2, 1310775, 2, 1310776, 2, 1310777, 2, 1310778, 2, 1310779, 2, 1310780, 2, 1310781, 2, 1310782, 2, 1441785, 2, 1441786, 2, 1441787, 2, 1441788, 2, 1441789, 2, 1441790, 2, 1441791, 2, 1376256, 2, 1376257, 2, 1376258, 2, 1376259, 2, 1376260, 2, 1376261, 2, 1376262, 2, 1376263, 2, 1376264, 2, 1376265, 2, 1376266, 2, 1376267, 2, 1376268, 2, 1376269, 2, 1376270, 2, 1376271, 2, 1376272, 2, 1376273, 2, 1376274, 2, 1376275, 2, 1376276, 2, 1376277, 2, 1376278, 2, 1376279, 2, 1376280, 2, 1376281, 2, 1376282, 2, 1376283, 2, 1376284, 2, 1376285, 2, 1376286, 2, 1376287, 2, 1376288, 2, 1376289, 2, 1376290, 2, 1376291, 2, 1376292, 2, 1376293, 2, 1376294, 2, 1376295, 2, 1376296, 2, 1376297, 2, 1376298, 2, 1376299, 2, 1376300, 2, 1376301, 2, 1376302, 2, 1376303, 2, 1376304, 2, 1376305, 2, 1376306, 2, 1376307, 2, 1376308, 2, 1376309, 2, 1376310, 2, 1376311, 2, 1376312, 2, 1376313, 2, 1376314, 2, 1376315, 2, 1376316, 2, 1376317, 2, 1376318, 2 )

[node name="Players" parent="Camera/TileMap"]

editor/display_folded = false

[node name="Door1" parent="Camera/TileMap/Players" instance=ExtResource( 4 )]

transform/pos = Vector2( 1408, 576 )

[node name="Door2" parent="Camera/TileMap/Players" instance=ExtResource( 4 )]

transform/pos = Vector2( 2112, 576 )

[node name="Soldier 1" parent="Camera/TileMap/Players" instance=ExtResource( 5 )]

transform/pos = Vector2( 1664, 320 )

[node name="Soldier 2" parent="Camera/TileMap/Players" instance=ExtResource( 5 )]

transform/pos = Vector2( 1856, 320 )

[node name="Soldier 3" parent="Camera/TileMap/Players" instance=ExtResource( 5 )]

editor/display_folded = true
transform/pos = Vector2( 2880, 832 )

[node name="Movable" type="Node" parent="Camera/TileMap/Players/Soldier 3"]

[node name="Soldier 4" parent="Camera/TileMap/Players" instance=ExtResource( 5 )]

editor/display_folded = true
transform/pos = Vector2( 960, 640 )

[node name="Movable" type="Node" parent="Camera/TileMap/Players/Soldier 4"]

[node name="Female Merchant" parent="Camera/TileMap/Players" instance=ExtResource( 6 )]

transform/pos = Vector2( 576, 512 )

[node name="Villager Oldman 1" parent="Camera/TileMap/Players" instance=ExtResource( 7 )]

editor/display_folded = true
transform/pos = Vector2( 1408, 320 )

[node name="SameTile" type="Node" parent="Camera/TileMap/Players/Villager Oldman 1"]

[node name="Villager Oldwoman 1" parent="Camera/TileMap/Players" instance=ExtResource( 8 )]

editor/display_folded = true
transform/pos = Vector2( 1152, 384 )

[node name="SameTile" type="Node" parent="Camera/TileMap/Players/Villager Oldwoman 1"]

[node name="Villager Male 1" parent="Camera/TileMap/Players" instance=ExtResource( 9 )]

editor/display_folded = true
transform/pos = Vector2( 2176, 320 )

[node name="Animate" parent="Camera/TileMap/Players/Villager Male 1"]

animation = "right"

[node name="Villager Female 1" parent="Camera/TileMap/Players" instance=ExtResource( 10 )]

editor/display_folded = true
transform/pos = Vector2( 2304, 320 )

[node name="Animate" parent="Camera/TileMap/Players/Villager Female 1"]

animation = "left"

[node name="Innkeeper" parent="Camera/TileMap/Players" instance=ExtResource( 11 )]

transform/pos = Vector2( 2944, 512 )

[node name="Villager Male 2" parent="Camera/TileMap/Players" instance=ExtResource( 11 )]

editor/display_folded = true
transform/pos = Vector2( 2112, 768 )

[node name="Movable" type="Node" parent="Camera/TileMap/Players/Villager Male 2"]

[node name="Villager Female 2" parent="Camera/TileMap/Players" instance=ExtResource( 10 )]

editor/display_folded = true
transform/pos = Vector2( 1216, 704 )

[node name="Movable" type="Node" parent="Camera/TileMap/Players/Villager Female 2"]

[node name="Villager Boy 1" parent="Camera/TileMap/Players" instance=ExtResource( 12 )]

editor/display_folded = true
transform/pos = Vector2( 1600, 640 )

[node name="Movable" type="Node" parent="Camera/TileMap/Players/Villager Boy 1"]

[node name="Villager Boy 2" parent="Camera/TileMap/Players" instance=ExtResource( 13 )]

editor/display_folded = true
transform/pos = Vector2( 1600, 832 )

[node name="Movable" type="Node" parent="Camera/TileMap/Players/Villager Boy 2"]

[node name="Villager Girl 1" parent="Camera/TileMap/Players" instance=ExtResource( 14 )]

editor/display_folded = true
transform/pos = Vector2( 1920, 832 )

[node name="Movable" type="Node" parent="Camera/TileMap/Players/Villager Girl 1"]

[node name="Villager Girl 2" parent="Camera/TileMap/Players" instance=ExtResource( 15 )]

editor/display_folded = true
transform/pos = Vector2( 1920, 640 )

[node name="Movable" type="Node" parent="Camera/TileMap/Players/Villager Girl 2"]

[node name="Scripts" parent="Camera/TileMap"]

editor/display_folded = true

[node name="Back0" type="Control" parent="Camera/TileMap/Scripts"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 640.0
margin/right = 320.0
margin/bottom = 896.0

[node name="Back1" type="Control" parent="Camera/TileMap/Scripts"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3264.0
margin/top = 640.0
margin/right = 3520.0
margin/bottom = 896.0

[node name="To F1" type="Control" parent="Camera/TileMap/Scripts"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1728.0
margin/top = 192.0
margin/right = 1856.0
margin/bottom = 320.0

[node name="UI" parent="."]

editor/display_folded = true

[node name="SceneName" parent="UI"]

text = "North Town"


[editable path="Camera/TileMap/Players/Villager Male 1"]
[editable path="Camera/TileMap/Players/Villager Female 1"]
